fix: responsive display word wrapping issue

--- a/_sass/faq.scss
+++ b/_sass/faq.scss
@@ -4,6 +4,9 @@
       button {
         font-size: 1.2em;
         color: #850916;
+        white-space: normal;
+        word-wrap: break-word;
+        text-align: left;
       }
       button:hover {
         color: #E72223;
